# strus

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING  CONTRIBUTORS  COPYING  GNUmakefile  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  LINKS  NOTES  PUBLISHED  README  TODO  index.html  setenv.sh  variables.mk
src/database_leveldb/: CMakeLists.txt  GNUmakefile  database.cpp  database.hpp  databaseClient.cpp  databaseClient.hpp  databaseConfig.cpp  databaseConfig.hpp  databaseCursor.cpp  databaseCursor.hpp  databaseLib.cpp  databaseTransaction.cpp  databaseTransaction.hpp  levelDbHandle.cpp  levelDbHandle.hpp  leveldbErrorCode.hpp  libstrus_database_leveldb.cpp
src/error/: CMakeLists.txt  errorBuffer.cpp  errorBuffer.hpp  libstrus_error.cpp
src/peermsgproc/: CMakeLists.txt  libstrus_peermsgproc.cpp  peerMessageBuilder.cpp  peerMessageBuilder.hpp  peerMessageHeader.hpp  peerMessageProcessor.cpp  peerMessageProcessor.hpp  peerMessageViewer.cpp  peerMessageViewer.hpp
src/prgload_std/: CMakeLists.txt  ProgramLoader.cpp  libstrus_storage_prgload_std.cpp  programLoader.cpp  programLoader.hpp
src/queryeval/: CMakeLists.txt  GNUmakefile  accumulator.cpp  accumulator.hpp  accumulatorArgument.hpp  docsetPostingIterator.hpp  keyMap.hpp  lexems.cpp  lexems.hpp  libstrus_queryeval.cpp  libstrus_queryeval.hpp  localStructAllocator.hpp  mapFunctionParameters.cpp  mapFunctionParameters.hpp  metaDataRestriction.cpp  metaDataRestriction.hpp  query.cpp  query.hpp  queryEval.cpp  queryEval.hpp  queryEvalLib.cpp  queryEvalParser.cpp  queryEvalParser.hpp  queryEvalStrus.cpp  queryParser.cpp  queryParser.hpp  ranker.hpp  stringIndexMap.hpp  summarizerConfig.cpp  summarizerConfig.hpp  summarizerDef.cpp  summarizerDef.hpp  termConfig.hpp  termDef.hpp  tupleGenerator.cpp  tupleGenerator.hpp  weightingConfig.cpp  weightingConfig.hpp  weightingDef.cpp  weightingDef.hpp  (+1 more)
src/queryeval/parser/: accumulateOperation.cpp  accumulateOperation.hpp  joinFunction.cpp  joinFunction.hpp  joinOperation.hpp  keyMap.hpp  lexems.cpp  lexems.hpp  mapFunctionParameters.cpp  mapFunctionParameters.hpp  selector.cpp  selector.hpp  selectorExpression.cpp  selectorSet.cpp  (+12 more)
src/queryproc/: CMakeLists.txt  GNUmakefile  GNUmakefile.old  libstrus_queryproc.cpp  libstrus_queryproc.hpp  queryProcessor.cpp  queryProcessor.hpp  queryProcessorLib.cpp  weightingFunctionSummarizer.cpp  weightingFunctionSummarizer.hpp
src/scalarfunc/: CMakeLists.txt  libstrus_scalarfunc.cpp  scalarFunction.cpp  scalarFunction.hpp  scalarFunctionInstance.cpp  scalarFunctionInstance.hpp  scalarFunctionLinearComb.cpp  scalarFunctionLinearComb.hpp  scalarFunctionParser.cpp  scalarFunctionParser.hpp
src/sentence/: CMakeLists.txt  libstrus_sentence.cpp  sentenceAnalyzerInstance.cpp  sentenceAnalyzerInstance.hpp
src/statsproc/: CMakeLists.txt  datedFileList.cpp  datedFileList.hpp  libstrus_statsproc.cpp  statisticsBuilder.cpp  statisticsBuilder.hpp  statisticsHeader.hpp  statisticsMap.cpp  statisticsMap.hpp  statisticsProcessor.cpp  statisticsProcessor.hpp  statisticsViewer.cpp  statisticsViewer.hpp
src/storage/: CMakeLists.txt  GNUmakefile  GNUmakefile.old  aclReader.cpp  aclReader.hpp  allIterator.hpp  attributeMap.cpp  attributeMap.hpp  attributeReader.cpp  attributeReader.hpp  blockKey.hpp  blockStorage.hpp  booleanBlock.cpp  booleanBlock.hpp  booleanBlockBatchWrite.cpp  booleanBlockBatchWrite.hpp  booleanBlockMap.cpp  booleanBlockMap.hpp  browsePostingIterator.cpp  browsePostingIterator.hpp  byteOrderMark.hpp  compactNodePrefixTrie.cpp  compactNodePrefixTrie.hpp  compactNodeTrie.cpp  compactNodeTrie.hpp  dataBlock.cpp  dataBlock.hpp  dataBlockStorage.cpp  dataBlockStorage.hpp  databaseAdapter.cpp  databaseAdapter.hpp  databaseKey.cpp  databaseKey.hpp  databaseRecord.cpp  databaseRecord.hpp  docIndexNode.cpp  docIndexNode.hpp  docnoRangeAllocator.hpp  documentBlockIteratorTemplate.hpp  documentFrequencyCache.cpp  (+159 more)
src/utils/: CMakeLists.txt  GNUmakefile  GNUmakefile.old  arithmeticVariantAsString.cpp  cmdLineOpt.cpp  configParser.cpp  crc32.cpp  cstring.c  fileio.cpp  fileio_sys.hpp  fileio_sys.hpp.in  formulaInterpreter.cpp  internationalization.cpp  internationalization.cpp.in  loggingMalloc.c  loggingMalloc.h  protocol.cpp  snprintf.c  stringMap.cpp  unreliableMalloc.c  unreliableMalloc.h  utils.cpp
src/vectorspace/: CMakeLists.txt  genModel.cpp  genModel.hpp  genmodel.cpp  genmodel.hpp  libstrus_vectorspace.cpp  lshModel.cpp  lshModel.hpp  lshmodel.cpp  lshmodel.hpp  random.cpp  random.hpp  simGroup.cpp  simGroup.hpp  simGroupMap.cpp  simGroupMap.hpp  simHash.cpp  simHash.hpp  simRelationMap.cpp  simRelationMap.hpp  simhash.cpp  simhash.hpp  sparseDim2Field.hpp  vectorSpaceModel.cpp  vectorSpaceModel.hpp
tests/: CMakeLists.txt  GNUmakefile
tests/booleanBlock/: CMakeLists.txt
tests/formula/: CMakeLists.txt
tests/functions/: CMakeLists.txt  GNUmakefile.old
tests/insert/: CMakeLists.txt
tests/loggingMalloc/: CMakeLists.txt
tests/merger/: CMakeLists.txt
tests/metaDataRestrictions/: CMakeLists.txt  GNUmakefile.old
tests/peermsgproc/: CMakeLists.txt
tests/posinfoBlock/: CMakeLists.txt  GNUmakefile
tests/positionWindow/: CMakeLists.txt
tests/program/: GNUmakefile
tests/query/: CMakeLists.txt
tests/queryeval/: CMakeLists.txt
tests/queryop/: CMakeLists.txt
tests/randoc/: CMakeLists.txt  GNUmakefile  GNUmakefile.old
tests/ranker/: CMakeLists.txt  GNUmakefile.old
tests/scalarfunc/: CMakeLists.txt
tests/sentenceAnalyzer/: CMakeLists.txt
tests/statisticsStorage/: CMakeLists.txt
tests/statsproc/: CMakeLists.txt
tests/storageop/: CMakeLists.txt
tests/struct/: CMakeLists.txt
tests/uintCompaction/: CMakeLists.txt
tests/utils/: GNUmakefile  fileio.cpp  primeFactorCollection.hpp  random.hpp  storageDef.hpp
tests/varSizeNodeTree/: CMakeLists.txt  GNUmakefile
tests/vectorSpaceModel/: CMakeLists.txt
tests/weighting/: CMakeLists.txt
tests/weightingProximity/: CMakeLists.txt
tests/weightingTitle/: CMakeLists.txt
(+1208 files in other folders)
