cmake_minimum_required(VERSION 2.6 FATAL_ERROR)

add_subdirectory( loggingMalloc )
add_subdirectory( scalarfunc )
add_subdirectory( storageop )
add_subdirectory( functions )
add_subdirectory( metaDataRestrictions )
add_subdirectory( ranker )
add_subdirectory( booleanBlock )
add_subdirectory( posinfoBlock )
add_subdirectory( positionWindow )
add_subdirectory( randoc )
add_subdirectory( varSizeNodeTree )
add_subdirectory( statsproc )
